--- a/node/package.json
+++ b/node/package.json
@@ -5,7 +5,6 @@
   "license": "MIT",
   "dependencies": {
     "@grpc/grpc-js": "^1.7.1",
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
+    "express": "^4.18.2"
   }
 }
