changed to have aiohttp return a json response, validated this works on azure app service wafc

--- a/python/reflection/Dockerfile
+++ b/python/reflection/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10.5-slim
+FROM python:3.9.14-slim
 
 WORKDIR /app
 
@@ -7,6 +7,6 @@ RUN pip install -r requirements.txt
 
 COPY . /app/
 
-EXPOSE 50051
+EXPOSE 50051 8000
 
 CMD [ "python", "app.py" ]
